the chapter 29 and chapter 30 of the Javascript course

--- a/index.html
+++ b/index.html
@@ -12899,6 +12899,219 @@
                 </div>
               </div>
             </div>
+            <div class="chapter">
+              <h3 id="nodeJs">
+                فصل بیست و نهم: آشنایی با Node.js و libraryهای جاوااسکریپتی
+              </h3>
+              <div class="sessions">
+                <h4 id="j283javascript">
+                  جلسه دویست و هشتاد و سوم: Node.js چیست؟
+                </h4>
+                <div class="sessionsContent">
+                  <p>
+                    هر مرورگر یک موتور جاوااسکریپتی دارد که کدهای جاوااسکریپت را
+                    اجرا می کند.
+                  </p>
+                  <p>
+                    از جاوااسکریپت در سمت بک اند هم می توانیم استفاده کنیم و
+                    کدهای جاوااسکریپت در سمت بک اند باید در سرور اجرا شوند اما
+                    چون در آنجا نمی توانیم یک مرورگر نصب کنیم، برای اجرای کدهای
+                    جاوااسکریپت از Node.js استفاده می کنیم.
+                  </p>
+                  <p>
+                    پس Node.js یک محیط برای اجرای کدهای جاوااسکریپت می باشد.
+                  </p>
+                  <p>Node.js درواقع موتور جاوااسکریپت کروم V8 می باشد.</p>
+                  <p>
+                    امکاناتی مثل BOM و DOM و Local storage و... امکانات مرورگر
+                    هستند و داخل Node.js وجود ندارند پس Node.js بطور مثال
+                    querySelector را نمی شناسد اما دستورات جاوااسکریپت مثل
+                    if-else و حلقه ها و httpRequestها و... را می شناسد.
+                  </p>
+                </div>
+                <h4 id="j284javascript">
+                  جلسه دویست و هشتاد و چهارم: نصب Node.js
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    از سایت nodejs.org گزینه LTS را دانلود کرده و نصب می کنیم.
+                  </p>
+                  <p>پس از نصب آن به VSCode رفته و Terminal را باز می کنیم.</p>
+                  <p>
+                    اگر در محیط ترمینال node -v را بزنیم ورژنی از node که نصب
+                    شده است را نشان می دهد.
+                  </p>
+                  <img src="./Javascript/284_1.png" />
+                  <p>
+                    اگر دستور npm -v را بزنیم ورژن npm که نصب شده است را نشان می
+                    دهد.
+                  </p>
+                  <img src="./Javascript/284_2.png" />
+                </div>
+                <h4 id="j285javascript">
+                  جلسه دویست و هشتاد و پنجم: نحوه استفاده از Node.js
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    حال می خواهیم یکسری کد جاوااسکریپتی بنویسیم و از طریق
+                    Node.js آنها را اجرا کنیم.
+                  </p>
+                  <p>
+                    یک فایل js. می سازیم و دیگر آنرا به کمک تگ script به فایل
+                    html متصل نمی کنیم.
+                  </p>
+                  <p>
+                    در محیط ترمینال اگر url پوشه پروژمان را نشان می داد(پوشه ای
+                    که فایل js. داخل آن قرار دارد) دستور node app.js را وارد می
+                    کنیم تا فایل app.js را اجرا کند.
+                  </p>
+                  <img src="./Javascript/285_1.png" />
+                  <img src="./Javascript/285_2.png" />
+                  <p>
+                    اگر در کدها از DOM استفاده کنیم node.js ارور می دهد چون DOM
+                    از امکانات مرورکر است و node.js آنرا نمی شناسد.
+                  </p>
+                  <img src="./Javascript/285_3.png" />
+                </div>
+                <h4 id="j286javascript">
+                  جلسه دویست و هشتاد و ششم: Third-Party Libraries
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    لایبری ها یکسری کدهایی هستند که از قبل نوشته شده اند و بصورت
+                    پکیج درآمده اند و ما از آنها استفاده می کنیم و دیگر به نوشتن
+                    مجدد آنها نیاز نیست. مثلا برای استفاده از یک انیمیشن در
+                    سایتمان می توانیم کلی کد html و css و js بنویسیم تا آن
+                    انیمیشن را بسازیم یا می توانیم از لایبری anime.js استفاده
+                    کنیم و از انیمیشن های آماده بهره ببریم.
+                  </p>
+                </div>
+                <h4 id="j287javascript">
+                  جلسه دویست و هشتاد و هفتم: استفاده از لایبری axios
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    axios یک HTTP client است که به وسیله آن می توانیم درخواست
+                    های HTTP را بفرستیم. همان کار ()fetch را انجام می دهد.
+                  </p>
+                  <p>
+                    از axios هم در سمت client و در مرورگر و هم در سمت server می
+                    توانیم استفاده کنیم.
+                  </p>
+                  <p>axios امکانات خیلی بیشتری نسبت به fetch به ما می دهد.</p>
+                  <p>
+                    در سایت axios-http.com اگر گزینه Get Started را بزنیم نحوه
+                    استفاده از axios را گفته است.
+                  </p>
+                  <p>
+                    برای استفاده از axios تگ script با src داده شده را به پروژه
+                    مان اضافه می کنیم.
+                  </p>
+                  <img src="./Javascript/287_1.png" />
+                  <p>
+                    که این روش اضافه کردن axios به پروژه خیلی کم استفاده می شود
+                    و روش های بهتری وجود دارد.
+                  </p>
+                  <p>
+                    برای استفاده از axios متد ()get را به همراه API به chaining،
+                    axios می کنیم سپس ()then. را به آنها chaining می کنیم.
+                  </p>
+                  <img src="./Javascript/287_2.png" />
+                  <p>
+                    دیکر لازم نیست از ()response.json استفاده کنیم. axios خودش
+                    بطور اتومات این کار را انجام می دهد.
+                  </p>
+                  <p>response را که گرفتیم از آن استفاده می کنیم.</p>
+                  <p>می توانیم از axios بصورت async-await هم استفاده کنیم.</p>
+                  <img src="./Javascript/287_3.png" />
+                </div>
+                <h4 id="j288javascript">
+                  جلسه دویست و هشتاد و هشتم: NPM چیست؟
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    وقتی node.js نصب می شود npm بصورت اتومات همراه با آن نصب می
+                    شود.
+                  </p>
+                  <p>
+                    npm مخفف node package manager می باشد یعنی مدیریت کننده پکیج
+                    ها و لایبری ها.
+                  </p>
+                  <p>
+                    npmjs.com سایتی است که می توانیم در آن لایبری هایی که وجود
+                    دارد را پیدا کنیم و در مورد آنها اطلاعاتی بگیریم.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="chapter">
+              <h3 id="security">فصل سی ام: امنیت</h3>
+              <div class="sessions">
+                <h4 id="j289javascript">
+                  جلسه دویست و هشتاد و نهم: اطلاعات حساس در برنامه
+                </h4>
+                <div class="sessionContent">
+                  <p>در سمت front-end نمی شود امنیت آنچنانی برقرار کرد.</p>
+                  <p>
+                    اطلاعات حساس را نباید در داخل کدهای مربوط به front-end قرار
+                    دهیم و باید اطلاعات و دیتاهای حساس در سمت سرور قرار بگیرند.
+                  </p>
+                </div>
+                <h4 id="j290javascript">
+                  جلسه دویست و نودم: بررسی CORS Policy
+                </h4>
+                <div class="sessionContent">
+                  <p>CORS مخفف Cross-Origin Resource Sharing می باشد.</p>
+                  <p>
+                    CORS Policy قوانینی است که مرورگرها آن را ایجاد کردند تا
+                    امنیت ارتباطات بالا برود.
+                  </p>
+                  <p>
+                    وقتی در سمت Client از یک domain مثل botostart.ir به سمت سرور
+                    به یک domain با همان نام(botostart.ir) درخواست فرستاده شود
+                    مرورگر گیر نمی دهد اما وقتی domain مرورگر با سرور متفاوت
+                    باشد مثل jsonplaceholder و localhost مرورگر گیر می دهد و می
+                    گوید که domain یکسان نیست و خطای CORS می دهد یعنی فقط از
+                    domain خودت میتونی درخواست بفرستی و اطلاعات بگیری و با
+                    domainهای دیگر نمیتونی درخواست بفرستی.
+                  </p>
+                  <p>
+                    برای رفع این ارور دو اکستنشن کروم Allow CORS و CORS unblock
+                    را نصب می کنیم و اگر مشکل حل نشد به بک اند دولوپر موضوع را
+                    اطلاع می دهیم تا domain ما را اوکی کند و مشکل رفع شود.
+                  </p>
+                </div>
+                <h4 id="j291javascript">جلسه دویست و نود و یکم: حملات XSS</h4>
+                <div class="sessionContent">
+                  <p>XSS مخفف Cross-Site Scripting attacks می باشد.</p>
+                  <p>
+                    فرض کنید در تصویر زیر هرچیزی داخل input بنویسیم داخل تگ span
+                    نمایش داده می شود.
+                  </p>
+                  <img src="./Javascript/291_1.png" />
+                  <p>
+                    حال اگر هکری عبارت تصویر زیر را وارد کند چون به document ما
+                    اضافه می شود alert نمایش داده می شود.
+                  </p>
+                  <img src="./Javascript/291_2.png" />
+                  <p>
+                    اشتباه اول ما این است که در فایل js. در تصویر اول به جای
+                    innerText از innerHTML استفاده کرده ایم چون اگر innerText
+                    بود عبارت داخل input را بصورت متن درنظر می گرفت و چیزی نمی
+                    شد.
+                  </p>
+                  <img src="./Javascript/291_3.png" />
+                  <img src="./Javascript/291_4.png" />
+                  <p>پس innerHTML را هرجایی الکی استفاده نکنیم.</p>
+                  <p>
+                    راه حل هندل اینطور حملات که هکر یکسری کد به برنامه تزریق می
+                    کند مخصوصا به httpRequestها سمت بک اند می باشد. که بک اند
+                    کارها برای برطرف کردن اینطور حملات از پکیج sanitizie استفاده
+                    می کنند تا درخواست را اعتبارسنجی کنند.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
           <div id="gitGithubGitlabCourse">
             <h2 id="gitGithubGitlab">git - Github - Gitlab</h2>
