end of the Tailwind course

--- a/index.html
+++ b/index.html
@@ -3878,6 +3878,45 @@
           <a href="#j54tailwind" class="sessionIndex"
             >جلسه پنجاه و چهارم: پیاده کردن header پروژه</a
           >
+          <a href="#j55tailwind" class="sessionIndex"
+            >جلسه پنجاه و پنجم: بنر سایت</a
+          >
+          <a href="#j56tailwind" class="sessionIndex"
+            >جلسه پنجاه و ششم: دسته بندی های سایت</a
+          >
+          <a href="#j57tailwind" class="sessionIndex"
+            >جلسه پنجاه و هفتم: ایجاد Count Down</a
+          >
+          <a href="#j58tailwind" class="sessionIndex">
+            جلسه پنجاه و هشتم: قسمت بنر تبلیغاتی سایت
+          </a>
+          <a href="#j59tailwind" class="sessionIndex"
+            >جلسه پنجاه و نهم: قسمت محصولات</a
+          >
+          <a href="#j60tailwind" class="sessionIndex">
+            جلسه شصتم: پیاده کردن بنرهای اطلاع رسانی
+          </a>
+          <a href="#j61tailwind" class="sessionIndex"
+            >جلسه شصت و یکم: قسمت watch list</a
+          >
+          <a href="#j62tailwind" class="sessionIndex">
+            جلسه شصت و دوم: پیاده سازی بنر تبلیغاتی دوم
+          </a>
+          <a href="#j63tailwind" class="sessionIndex"
+            >جلسه شصت و سوم: قسمت مزایای وبسایت</a
+          >
+          <a href="#j64tailwind" class="sessionIndex">
+            جلسه شصت و چهارم: پیاده کردن layout فوتر با grid
+          </a>
+          <a href="#j65tailwind" class="sessionIndex"
+            >جلسه شصت و پنجم: اینپوت اطلاع رسانی</a
+          >
+          <a href="#j66tailwind" class="sessionIndex">
+            جلسه شصت و ششم: اینماد و شبکه های اجتماعی
+          </a>
+          <a href="#j67tailwind" class="sessionIndex"
+            >جلسه شصت و هفتم: پیاده سازی Accordion</a
+          >
         </div>
       </aside>
       <main>
@@ -15127,6 +15166,36 @@
                 <h4 id="j54tailwind">
                   جلسه پنجاه و چهارم: پیاده کردن header پروژه
                 </h4>
+                <h4 id="j55tailwind">جلسه پنجاه و پنجم: بنر سایت</h4>
+                <h4 id="j56tailwind">جلسه پنجاه و ششم: دسته بندی های سایت</h4>
+                <h4 id="j57tailwind">جلسه پنجاه و هفتم: ایجاد Count Down</h4>
+                <h4 id="j58tailwind">
+                  جلسه پنجاه و هشتم: قسمت بنر تبلیغاتی سایت
+                </h4>
+                <h4 id="j59tailwind">جلسه پنجاه و نهم: قسمت محصولات</h4>
+                <div class="sessionContent">
+                  <p>
+                    کلاس no-scrollbar که استاد در فایل input.css تعریف کرده بود
+                    را اینجا استفاده کردیم. آیتم ها اسکرول می خورند ولی چون از
+                    این کلاس استفاده کردیم، نوار scrollbar نشان داده نمی شود.
+                  </p>
+                </div>
+                <h4 id="j60tailwind">
+                  جلسه شصتم: پیاده کردن بنرهای اطلاع رسانی
+                </h4>
+                <h4 id="j61tailwind">جلسه شصت و یکم: قسمت watch list</h4>
+                <h4 id="j62tailwind">
+                  جلسه شصت و دوم: پیاده سازی بنر تبلیغاتی دوم
+                </h4>
+                <h4 id="j63tailwind">جلسه شصت و سوم: قسمت مزایای وبسایت</h4>
+                <h4 id="j64tailwind">
+                  جلسه شصت و چهارم: پیاده کردن layout فوتر با grid
+                </h4>
+                <h4 id="j65tailwind">جلسه شصت و پنجم: اینپوت اطلاع رسانی</h4>
+                <h4 id="j66tailwind">
+                  جلسه شصت و ششم: اینماد و شبکه های اجتماعی
+                </h4>
+                <h4 id="j67tailwind">جلسه شصت و هفتم: پیاده سازی Accordion</h4>
               </div>
             </div>
           </div>
