chapter 13 and 14 of the React course

--- a/index.html
+++ b/index.html
@@ -1981,7 +1981,7 @@
             جلسه صد و نوزدهم: مکانیسم State Scheduling
           </a>
           <a href="#j120react" class="sessionIndex">
-            جلسه صد و نوزدهم: مکانیسم State Batching
+            جلسه صد و بیستم: مکانیسم State Batching
           </a>
           <a href="#cryptoAppProject" class="chapterIndex"
             >فصل چهاردهم: پروژه صرافی ارز دیجیتال</a
@@ -16180,6 +16180,291 @@
                     useEffect یک کار را انجام دهد.
                   </p>
                 </div>
+              </div>
+            </div>
+            <div class="chapter">
+              <h3 id="behindScenesReact">فصل سیزدهم: پشت پرده ریکت</h3>
+              <div class="sessions">
+                <h4 id="j116react">جلسه صد و شانزدهم: بررسی ReactStrictMode</h4>
+                <div class="sessionContent">
+                  <p>
+                    وقتی از useEffect استفاده می کنیم و داخل Callback function
+                    آن یک clg می گیریم در console می بینیم که دوبار log گرفته می
+                    شود چرا؟
+                  </p>
+                  <img src="./react/116_1.png" />
+                  <p>
+                    دلیل آن کامپوننت React.StrictMode است که در فایل main.jsx به
+                    دور App پیچیده شده است و اگر آن را برداریم می بینیم که یکبار
+                    log گرفته می شود.
+                  </p>
+                  <img src="./react/116_2.png" />
+                  <p>چرا ریکت آن را روی برنامه ما قرار داده است؟</p>
+                  <p>
+                    ریکت برای اینکه مطمئن شود برنامه ما به درستی کار می کند و
+                    باگ ندارد چیزهایی مثل useEffect را دوبار اجرا می کند.
+                  </p>
+                  <p>
+                    بهتر است کامپوننت React.StrictMode را حذف نکنیم و بماند.
+                  </p>
+                  <p>
+                    البته چیزهایی مثل useEffect در حال توسعه برنامه دوبار اجرا
+                    می شوند و اگر برنامه کامل شود و روی هاست برود و در دسترس
+                    کاربر قرار گیرد دوبار آن ها را اجرا نمی کند.
+                  </p>
+                </div>
+                <h4 id="j117react">جلسه صد و هفدهم: ریکت چگونه کار می کند؟</h4>
+                <div class="sessionContent">
+                  <p>
+                    در قسمت dependencies فایل package.json یک React داریم و یک
+                    react-dom تفاوتشان چیست؟
+                  </p>
+                  <p>
+                    کار لایبری react مدیریت کردن کامپوننت ها(اعم از stateها و
+                    propsها و...) است و react کاری به DOM پروژه که داخل مرورگر
+                    است ندارد و تغییراتی روی آن اعمال نمی کند.
+                  </p>
+                  <p>
+                    اما react-dom به عنوان رابط بین react و DOM عمل می کند و DOM
+                    را تغییر می دهد(تغییرات را روی DOM اعمال می کند)
+                  </p>
+                  <p>
+                    React برای اینکه performance کار بالا برود مستقیما همه
+                    تغییرات در حال توسعه برنامه را روی DOM اعمال نمی کند و از
+                    Virtual DOM(DOM مجازی) استفاده می کند که یک نمونه از DOM
+                    واقعی است اما DOM واقعی نیست.
+                  </p>
+                  <p>
+                    React تغییرات ایجاد شده را روی Virtual DOM اعمال می کند.
+                  </p>
+                  <p>
+                    ریکت برای برنامه یک Virtual DOM می سازد(Virtual DOM اولیه)
+                    حال اگر تغییری در برنامه(یک کامپوننت) بدهیم یک Virtual DOM
+                    دیگر می سازد(Virtual DOM ثانویه) سپس این دو Virtual DOM را
+                    مقایسه می کند(که به این مقایسه اصطلاحا diffing گفته می شود)
+                    وقتی مقایسه کرد می بیند مثلا یک المان اضافه شده است و آن
+                    تغییرات را می بیند. وقتی تغییرات را پیدا کرد از طریق
+                    react-dom آن تغییرات را به روی DOM اصلی اعمال می کند تا کل
+                    DOM اصلی را آپدیت نکند و فقط همان تغییر کوچک را اعمال کند.
+                    به همین دلیل performance ریکت خیلی بالاست.
+                  </p>
+                </div>
+                <h4 id="j118react">
+                  جلسه صد و هجدهم: مشاهده عملی مکانیسم ریکت
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    در تصویر زیر می بینیم هنگامی که روی باتن toggle کلیک می کنیم
+                    در قسمت Elements تگ h3 را یک لحظه هایلایت بنفش می کند و سپس
+                    هایلایت را برمی دارد. یعنی فقط آن تگ پس از مقایسه Virtual
+                    DOMها به DOM اصلی اضافه می شود و کل DOM آپدیت نمی شود.
+                  </p>
+                  <img src="./react/118_1.png" />
+
+                </div>
+                <h4 id="j119react">
+                  جلسه صد و نوزدهم: مکانیسم State Scheduling
+                </h4>
+                <div class="sessionContent">
+                  <p>State Scheduling یعنی برنامه ریزی کردن State</p>
+                  <p>
+                    وقتی یک State را تغییر می دهیم بلافاصله State تغییر نمی کند
+                    و گفتیم که setState یک فانکشن Async است.
+                  </p>
+                  <p>
+                    چون Stateها به ترتیب اهمیت در یک برنامه زمانی یا Schedule
+                    قرار می گیرند تا اگر قبل از تغییر State کار خاصی لازم است
+                    انجام شود، ابتدا ریکت آن کار را انجام دهد سپس State را تغییر
+                    دهد به همین دلیل عمل setState مقداری طول می کشد(این عملیات
+                    انقدر سریع اتفاق می افتد که ما چیزی حس نمی کنیم)
+                  </p>
+                </div>
+                <h4 id="j120react">جلسه صد و بیستم: مکانیسم State Batching</h4>
+                <div class="sessionContent">
+                  <p>
+                    وقتی با یک کلیک دو یا چند State تغییر می کند، ریکت به ازای
+                    تغییر هر State یکبار کامپوننت را rerender نمی کند و Stateها
+                    را Batch می کند و پس از تغییر Stateها در یک کلیک، کامپوننت
+                    را rerender می کند که این کار باعث بالا رفتن performance
+                    ریکت می شود.
+                  </p>
+                  <img src="./react/120_1.png" />
+                </div>
+              </div>
+            </div>
+            <div class="chapter">
+              <h3 id="cryptoAppProject">فصل چهاردهم: پروژه صرافی ارز دیجیتال</h3>
+              <div class="sessions">
+                <h4 id="j121react">جلسه صد و بیست و یکم: معرفی پروژه</h4>
+                <h4 id="j122react">جلسه صد و بیست و دوم: ساختار اولیه پروژه</h4>
+                <div class="sessionContent">
+                  <p>
+                    توسط دستورهای npm create vite@latest و npm install و npm run
+                    dev ساختار اولیه پروژه را پیاده می کنیم.
+                  </p>
+                </div>
+                <h4 id="j123react">جلسه صد و بیست و سوم: بررسی api پروژه</h4>
+                <div class="sessionContent">
+                  <p>
+                    وارد سایت www.coingecko.com شده و در قسمت Products گزینه
+                    Crypto API را می زنیم.
+                  </p>
+                  <p>
+                    حال اگر گزینه Explore Docs را بزنیم توضیحات مربوط به
+                    endpointها و queryها را نشان می دهد که درخواست را به چه صورت
+                    و به چه endpointی و با چهqueryهایی بفرستیم(که به این صفحه
+                    Swagger گفته می شود)
+                  </p>
+                  <p>
+                    برای اینکه بتوانیم درخواست های زیادی بفرستیم باید در سایت
+                    ثبتنام کنیم و یک API Key دریافت کنیم. اگر به قسمت User guide
+                    برویم نحوه استفاده از آن API Key را نشان می دهد.
+                  </p>
+                </div>
+                <h4 id="j124react">
+                  جلسه صد و بیست و چهارم: فچ کردن دیتا از api
+                </h4>
+                <h4 id="j125react">
+                  جلسه صد و بیست و پنجم: ایجاد Services برای مدیریت apiها
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    فایل های مربوط به درخواست هایی که به سمت سرور می رود را داخل
+                    فولدر services قرار می دهیم.
+                  </p>
+                </div>
+                <h4 id="j126react">
+                  جلسه صد و بیست و ششم: نشان دادن Coinها در جدول
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    اگر برای قیمت coinها از متد ()toLocaleString استفاده کنیم
+                    اعداد را 3 رقم 3 رقم جدا می کند.
+                  </p>
+                  <p>
+                    اگر برای تغییر قیمت coinها از متد (2)toFixed استفاده کنیم
+                    مقدار تغییر را تا 2 رقم اعشار نشان می دهد.
+                  </p>
+                </div>
+                <h4 id="j127react">
+                  جلسه صد و بیست و هفتم: اکسترکت کردن کامپوننت TableRow
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    موقع destructure کردن می توانیم بگوییم مثلا
+                    price_change_percentage_24 را با نام destructure ،
+                    price_change کن و آن را به این صورت می نویسیم.
+                  </p>
+                  <p dir="ltr">price_change_percentage_24:price_change</p>
+                </div>
+                <h4 id="j128react">
+                  جلسه صد و بیست و هشتم: افزودن Loader به پروژه
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    برای استفاده از Loader از لایبری react-loader-spinner
+                    استفاده می کنیم که اگر آن را در گوگل سرچ کنیم و به سایت
+                    npmjs.com برویم نحوه نصب و استفاده از آن را نمایش می دهد.
+                  </p>
+                </div>
+                <h4 id="j129react">
+                  جلسه صد و بیست و نهم: استایل دهی به جدول قیمت ها
+                </h4>
+                <h4 id="j130react">
+                  جلسه صد و سی ام: پیاده سازی کامپوننت Pagination
+                </h4>
+                <h4 id="j131react">
+                  جلسه صد و سی و یکم: Paginate کردن دیتای Coinها
+                </h4>
+                <h4 id="j132react">
+                  جلسه صد و سی و دوم: استایل دهی به کامپوننت Pagination
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    وقتی به className یک ternary operator می دهیم باید حواسمان
+                    باشد که از && استفاده نکنیم تا یک مقدار بولین به return ،
+                    className نکند.
+                  </p>
+                </div>
+                <h4 id="j133react">
+                  جلسه صد و سی و سوم: تغییر Currency مربوط به دیتاها
+                </h4>
+                <h4 id="j134react">
+                  جلسه صد و سی و چهارم: افزودن قابلیت سرچ به پروژه
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    ارور 429 که در console نشان داده می شود بخاطر محدود کردن
+                    تعداد درخواست ها می باشد.
+                  </p>
+                  <p>
+                    در سایت مربوط به API برای سرچ کردن هم یک endpoint جدا می
+                    دهد.
+                  </p>
+                  <p>
+                    قطعه کد <span dir="ltr">if(!text) return</span> باعث می شود
+                    useEffect در حالت mounting اجرا نشود.
+                  </p>
+                </div>
+                <h4 id="j135react">
+                  جلسه صد و سی و پنجم: افزودن Cleanup function
+                </h4>
+                <h4 id="j136react">
+                  جلسه صد و سی و ششم: نشان دادن دیتای سرچ شده
+                </h4>
+                <h4 id="j137react">
+                  جلسه صد و سی و هفتم: نشان دادن Loading در زمان سرچ کردن
+                </h4>
+                <h4 id="j138react">
+                  جلسه صد و سی و هشتم: استایل دهی به SearchBox
+                </h4>
+                <h4 id="j139react">
+                  جلسه صد و سی و نهم: دیباگ کردن قسمت سرچ بعد از استایل دهی
+                </h4>
+                <h4 id="j140react">جلسه صد و چهلم: ایجاد Modal</h4>
+                <h4 id="j141react">
+                  جلسه صد و چهل و یکم: گرفتن دیتای نمودار از api
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    در سایت مربوط به API برای گرفتن اطلاعات نمودار یک endpoint
+                    جدا می دهد.
+                  </p>
+                </div>
+                <h4 id="j142react">
+                  جلسه صد و چهل و دوم: تغییر فرمت دیتا برای رسم نمودار
+                </h4>
+                <div class="sessionContent">
+                  <p>برای رسم نمودار از لایبری recharts استفاده می کنیم.</p>
+                  <p>
+                    در سایت recharts.org و در قسمت guide نحوه نصب و استفاده از
+                    لایبری را گفته است.
+                  </p>
+                  <p>
+                    طبق راهنمایی خود سایت دیتایی که به لایبری برای رسم نمودار می
+                    دهیم باید بصورت آرایه ای از آبجکت ها باشد.
+                  </p>
+                  <p>
+                    پس یک فانکشن تعریف می کنیم تا دیتا را به آرایه ای از آبجکت
+                    ها تبدیل کند.
+                  </p>
+                </div>
+                <h4 id="j143react">جلسه صد و چهل و سوم: رسم کردن نمودار</h4>
+                <div class="sessionContent">
+                  <p>
+                    در سایت recharts.org و در قسمت Examples نحوه رسم نمودار از
+                    روی دیتایی که بصورت آرایه ای از آبجکت ها است را گفته است.
+                  </p>
+                </div>
+                <h4 id="j144react">
+                  جلسه صد و چهل و چهارم: نشان دادن سایر دیتاها در Modal
+                </h4>
+                <h4 id="j145react">
+                  جلسه صد و چهل و پنجم: امکان تغییر نمودار توسط کاربر
+                </h4>
+                <h4 id="j146react">
+                  جلسه صد و چهل و ششم: افزودن Layout به پروژه
+                </h4>
               </div>
             </div>
             <div class="chapter">
